# opensearch-docling-graphrag

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py
.github/workflows/: ci.yml
api/: app.py  deps.py  limiter.py  routes.py
benchmark/: questions.json  results.json
benchmark/history/: run_20260221_180144.json  run_20260221_182858.json  run_20260221_184550.json  run_20260221_223026.json
data/: sample_graphrag.txt  sample_semantic_companion_layer.txt
opensearch_graphrag/: cache.py  chunker.py  cognitive_retriever.py  config.py  embedder.py  entity_extractor.py  exceptions.py  generator.py  graph_builder.py  hallucination_detector.py  loader.py  models.py  ollama_client.py  opensearch_store.py  query_expander.py  reranker.py  retriever.py  retry.py  service.py  utils.py
scripts/: ingest.py  pull_models.sh  run_benchmark.py
tests/: conftest.py  test_api_routes.py  test_cache.py  test_chunker.py  test_cognitive_retriever.py  test_config.py  test_edge_cases.py  test_embedder.py  test_entity_extractor.py  test_generator.py  test_graph_builder.py  test_hallucination_detector.py  test_i18n.py  test_loader.py  test_models.py  test_opensearch_store.py  test_query_expander.py  test_reranker.py  test_retriever.py  test_retry.py  test_scaffold.py  test_service.py
ui/: i18n.py  streamlit_app.py
ui/components/: graph_viz.py
